--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.atr.tedit"
-    android:versionCode="9"
-    android:versionName="2.1.3">
+    package="com.atr.tedit">
 
     <application
         android:allowBackup="true"
@@ -27,7 +25,6 @@
         </activity>
     </application>
 
-    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="26"/>
     <supports-screens android:anyDensity="true" android:largeScreens="true"
         android:normalScreens="true" android:smallScreens="true"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
