Color Pallet Adjustments
Adjustments have been made to the color pallet for focused icons, alert dialogs and EditText elements so as to mirror the color pallet used in the icon created by David Mind.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:hardwareAccelerated="true">
-        <activity android:name=".TEditActivity" android:windowSoftInputMode="stateHidden|adjustResize">
+        <activity android:name=".TEditActivity" android:windowSoftInputMode="stateHidden|adjustResize"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
